Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41179

QWidgetPrivate::setRenderToTexture breaks QMainWindow::setUnifiedTitleAndToolBarOnMac

    XMLWordPrintable

Details

    Description

      This means that setting this flag and adding a QQuickWidget, QOpenGLWidget or QWebEngineView as a child of the main window will show the toolbar as black (the clear color used by QPlatformBackingStore::composeAndFlush).

      I didn't find a way to get glClear in composeAndFlush not to overwrite the gradient left by the NSTexturedBackgroundWindowMask flag.

      QMacStyle will test this flag and then paint the toolbars and tabs background as transparent in this case. If it is not possible to support we should make sure that the style paints normally when QWidgetPrivate::textureChildSeen is set on the QMainWindow.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            jturcott Jocelyn Turcotte
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes