Disable the unified toolbar on OS X in QtWebEngineWidgets examples

The unified toolbar doesn't work yet with QOpenGLWidget, which we use
to render RenderWidgetHostViewQtDelegateWidget.

Task-number: QTBUG-41179
Change-Id: I5b33d8c06600162974a05bff5fec6e1c7b59e939
Reviewed-by: Andras Becsi <andras.becsi@digia.com>